NEW298476
REGRESSION(299621@main): [MacOS Debug] ASSERTION FAILED: m_gamepads[platformGamepad.index] in 'gamepad/gamepad-visibility-1.html' is failing
https://bugs.webkit.org/show_bug.cgi?id=298476
Summary REGRESSION(299621@main): [MacOS Debug] ASSERTION FAILED: m_gamepads[platformG...
Marta Darbinyan
Reported 2025-09-05 14:40:18 PDT
The following test is crashing with assertion errors on different PRs in EWS after 299621@main. http/tests/cache/disk-cache/disk-cache-302-status-code.html ASSERTION FAILED: m_gamepads[platformGamepad.index()] /Volumes/Data/worker/macOS-Sequoia-Debug-Build-EWS/build/Source/WebCore/Modules/gamepad/NavigatorGamepad.cpp(190) : void WebCore::NavigatorGamepad::gamepadDisconnected(PlatformGamepad &) 1 0x3007b1730 WebCore::NavigatorGamepad::gamepadDisconnected(WebCore::PlatformGamepad&) 2 0x3005a71cc WebCore::GamepadManager::platformGamepadDisconnected(WebCore::PlatformGamepad&) 3 0x11cb1d874 WebKit::WebGamepadProvider::gamepadDisconnected(unsigned int) 4 0x11c5bf190 WebKit::WebProcess::gamepadDisconnected(unsigned int) 5 0x11acd0070 auto void IPC::callMemberFunction<WebKit::WebProcess, WebKit::WebProcess, void (unsigned int), std::__1::tuple<unsigned int>>(WebKit::WebProcess*, void (WebKit::WebProcess::*)(unsigned int), std::__1::tuple<unsigned int>&&)::'lambda'(auto&&...)::operator()<unsigned int>(auto&&...) const 6 0x11accffdc decltype(std::declval<WebKit::WebProcess>()(std::declval<unsigned int>())) std::__1::__invoke[abi:sn190102]<void IPC::callMemberFunction<WebKit::WebProcess, WebKit::WebProcess, void (unsigned int), std::__1::tuple<unsigned int>>(WebKit::WebProcess*, void (WebKit::WebProcess::*)(unsigned int), std::__1::tuple<unsigned int>&&)::'lambda'(auto&&...), unsigned int>(WebKit::WebProcess&&, unsigned int&&) 7 0x11accffb0 decltype(auto) std::__1::__apply_tuple_impl[abi:sn190102]<void IPC::callMemberFunction<WebKit::WebProcess, WebKit::WebProcess, void (unsigned int), std::__1::tuple<unsigned int>>(WebKit::WebProcess*, void (WebKit::WebProcess::*)(unsigned int), std::__1::tuple<unsigned int>&&)::'lambda'(auto&&...), std::__1::tuple<unsigned int>, 0ul>(WebKit::WebProcess&&, WebKit::WebProcess&&, std::__1::__tuple_indices<0ul>) 8 0x11accff74 decltype(auto) std::__1::apply[abi:sn190102]<void IPC::callMemberFunction<WebKit::WebProcess, WebKit::WebProcess, void (unsigned int), std::__1::tuple<unsigned int>>(WebKit::WebProcess*, void (WebKit::WebProcess::*)(unsigned int), std::__1::tuple<unsigned int>&&)::'lambda'(auto&&...), std::__1::tuple<unsigned int>>(WebKit::WebProcess&&, WebKit::WebProcess&&) 9 0x11accff48 void IPC::callMemberFunction<WebKit::WebProcess, WebKit::WebProcess, void (unsigned int), std::__1::tuple<unsigned int>>(WebKit::WebProcess*, void (WebKit::WebProcess::*)(unsigned int), std::__1::tuple<unsigned int>&&) 10 0x11a96d8f0 void IPC::handleMessage<Messages::WebProcess::GamepadDisconnected, IPC::Connection, WebKit::WebProcess, WebKit::WebProcess, void (unsigned int)>(IPC::Connection&, IPC::Decoder&, WebKit::WebProcess*, void (WebKit::WebProcess::*)(unsigned int)) 11 0x11a969114 WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 12 0x11d7153d8 IPC::Connection::dispatchMessage(IPC::Decoder&) 13 0x11d715840 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 14 0x11d715b64 IPC::Connection::dispatchOneIncomingMessage() 15 0x11d73bcd4 IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_2::operator()() const 16 0x11d73bc30 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_2, void>::call() 17 0x12ee0705c WTF::Function<void ()>::operator()() const 18 0x12eed55b0 WTF::RunLoop::performWork() 19 0x12eedd458 WTF::RunLoop::performWork(void*) 20 0x19a109cd4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 21 0x19a109c68 __CFRunLoopDoSource0 22 0x19a1099d4 __CFRunLoopDoSources0 23 0x19a108628 __CFRunLoopRun 24 0x19a107c58 CFRunLoopRunSpecific 25 0x19b6d6c78 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 26 0x19b74e79c -[NSRunLoop(NSRunLoop) run] 27 0x199d309c8 _xpc_objc_main 28 0x199d40fc8 _xpc_main 29 0x199d30568 _xpc_copy_xpcservice_dictionary 30 0x11a5311ac WebKit::XPCServiceMain(int, char const**) 31 0x11d5fb2ec WKXPCServiceMain com.apple.WebKit.WebContent.Development terminated (pid 2380) for reason: crash LEAK: 1 WebPageProxy Test results: https://ews-build.webkit.org/#/builders/122/builds/35271 Test history: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fcache%2Fdisk-cache%2Fdisk-cache-302-status-code.html
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-05 14:40:44 PDT
Marta Darbinyan
Comment 2 2025-09-05 14:42:45 PDT
The test runs right before newly added `gamepad/gamepad-visibility-1.html` test in 299621@main gamepad/gamepad-vibrationActuator-playEffect-validation.html gamepad/gamepad-vibrationActuator-type.html gamepad/gamepad-visibility-1.html http/tests/cache/disk-cache/disk-cache-302-status-code.html
EWS
Comment 3 2025-09-05 14:58:17 PDT
Test gardening commit 299646@main (d8fd4d263989): <https://commits.webkit.org/299646@main> Reviewed commits have been landed. Closing PR #50389 and removing active labels.
Diego Pino
Comment 4 2025-09-07 20:22:18 PDT
Thanks for the reporting. I think the subject should refer to test 'gamepad/gamepad-visibility-1.html' since that's test failing. I will change the subject to reflect that. When I landed , The MacOS Debug EWS bot also reported a test was failing (https://ews-build.webkit.org/#/builders/122/builds/34735/), but in this case it was 'http/tests/cache/disk-cache/speculative-validation/cacheable-redirect.html'. The test didn't seem to be related to gamepads, so I dismissed as a false positive. I understood now what happened. The 'http/tests/cache/disk-cache/' tests run after the 'gamepad/' test. What it was reported was the test that run right after 'gamepad/gamepad-visibility-1.html'. I will take a look and try to come up with a fix.
Kimmo Kinnunen
Comment 5 2025-12-03 05:46:15 PST
Jonathan Bedard
Comment 6 2026-01-21 14:30:56 PST
*** Bug 305660 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.