REGRESSION(299621@main): [MacOS Debug] ASSERTION FAILED: m_gamepads[platformGamepad.index] in 'gamepad/gamepad-visibility-1.html' is failing https://bugs.webkit.org/show_bug.cgi?id=298476 rdar://159970513

Reviewed by NOBODY (OOPS!).

Test runs such as following would fail:
run-webkit-tests --iterations 100 --no-build --verbose  --details \
 --debug-rwt-logging --no-retry --no-show-results --debug \
 --exit-after-n-failures=1 gamepad/gamepad-vibrationActuator-type.html \
 gamepad/gamepad-visibility-1.html

Running gamepad/gamepad-visibility-1.html would result frequently in
crash of the subsequent test, making it harder to analyze test failures.

GamepadManager would try to implement the feature where gamepad
connection info is not exposed to the page unless the gamepad is
interacted with. It would assert when running tests, loading two pages
at the same time.

The first web view would see mock gamepad connect, use, disconnect.
Then other web view would invoke connect, disconnect.
The other web view would survive the disconnect, as it would be stored
in "blind" list. The first web view would be moved off of the "blind
list", and would assert on seeing disconnect without connect. Connects
are no-op due to the above exposure filtering.

Fix by removing complex list handling related to the "blind"
window/navigator concept. Also remove list handling related to vision
os "guarantine" feature.

Instead, implement [[exposed]] property as designed in the spec:
When it's time to expose the Gamepad, create it to NavigatorGamepad.

To be able to implement consistent code, fix existing bugs:
 - Disconnected Gamepad instances were left in "connected" state. Mark
   them disconnected before dispatching the disconnect event.
 - Navigator.getGamepads() list would end in null values. It
   is specified to end in a populated value or be empty.
 - The disconnected gamepad should remain in Navigator.getGamepads()
   for the duration of the gamepaddisconnected event.

Tests: gamepad/gamepad-connect-disconnect-invisible.html
       gamepad/gamepad-visibility-poll.html

Tests: gamepad/gamepad-connect-disconnect-invisible.html
       gamepad/gamepad-visibility-poll.html
* LayoutTests/gamepad/gamepad-connect-disconnect-invisible-expected.txt: Added.
* LayoutTests/gamepad/gamepad-connect-disconnect-invisible.html: Added.
* LayoutTests/gamepad/gamepad-polling-access-expected.txt:
* LayoutTests/gamepad/gamepad-visibility-poll-expected.txt: Added.
* LayoutTests/gamepad/gamepad-visibility-poll.html: Added.
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/Modules/gamepad/GamepadManager.cpp:
(WebCore::GamepadManager::GamepadManager):
(WebCore::GamepadManager::platformGamepadConnected):
(WebCore::GamepadManager::platformGamepadDisconnected):
(WebCore::GamepadManager::platformGamepadInputActivity):
(WebCore::GamepadManager::makeGamepadsVisible):
(WebCore::GamepadManager::registerNavigator):
(WebCore::GamepadManager::unregisterNavigator):
(WebCore::GamepadManager::registerDOMWindow):
(WebCore::GamepadManager::unregisterDOMWindow):
(WebCore::GamepadManager::didUpdateGamepadAccess):
(WebCore::navigatorGamepadFromDOMWindow): Deleted.
(WebCore::GamepadManager::findUnquarantinedNavigatorsAndWindows): Deleted.
(WebCore::GamepadManager::makeGamepadVisible): Deleted.
(WebCore::GamepadManager::updateQuarantineStatus): Deleted.
* Source/WebCore/Modules/gamepad/GamepadManager.h:
* Source/WebCore/Modules/gamepad/NavigatorGamepad.cpp:
(WebCore::NavigatorGamepad::ensureGamepad):
(WebCore::NavigatorGamepad::gamepadIfExists const):
(WebCore::NavigatorGamepad::removeGamepadIfExists):
(WebCore::NavigatorGamepad::gamepads):
(WebCore::NavigatorGamepad::gamepadFromPlatformGamepad):
(WebCore::NavigatorGamepad::gamepadsBecameVisible): Deleted.
(WebCore::NavigatorGamepad::gamepadConnected): Deleted.
(WebCore::NavigatorGamepad::gamepadDisconnected): Deleted.
(WebCore::NavigatorGamepad::protectedPage const): Deleted.
* Source/WebCore/Modules/gamepad/NavigatorGamepad.h:
* Source/WebCore/page/Page.cpp:
(WebCore::Page::allowGamepadAccess):
* Source/WebKit/WebProcess/GPU/media/RemoteMediaPlayerManager.cpp:
(WebKit::RemoteMediaPlayerManager::setUseGPUProcess):
* Source/WebKit/WebProcess/GPU/webrtc/RemoteVideoFrameObjectHeapProxyProcessor.cpp:
(WebKit::RemoteVideoFrameObjectHeapProxyProcessor::getVideoFrameBuffer):