Source/WebCore/Modules/gamepad/GamepadManager.cpp
@@ -47,11 +47,6 @@
 
 namespace WebCore {
 
-static NavigatorGamepad& navigatorGamepadFromDOMWindow(LocalDOMWindow& window)
-{
-    return NavigatorGamepad::from(window.protectedNavigator().get());
-}
-
 GamepadManager& GamepadManager::singleton()
 {
     static NeverDestroyed<GamepadManager> sharedManager;
@@ -59,244 +54,135 @@ GamepadManager& GamepadManager::singleton()
 }
 
 GamepadManager::GamepadManager()
-    : m_isMonitoringGamepads(false)
 {
 }
 
-#if PLATFORM(VISION)
-void GamepadManager::findUnquarantinedNavigatorsAndWindows(WeakHashSet<Navigator>& navigators, WeakHashSet<LocalDOMWindow, WeakPtrImplWithEventTargetData>& windows)
+void GamepadManager::platformGamepadConnected(PlatformGamepad&, EventMakesGamepadsVisible eventVisibility)
 {
-    for (auto& navigator : m_navigators) {
-        if (!m_gamepadQuarantinedNavigators.contains(navigator))
-            navigators.add(navigator);
-    }
-    for (auto& window : m_domWindows) {
-        if (!m_gamepadQuarantinedDOMWindows.contains(window))
-            windows.add(window);
-    }
-}
-#endif
-
-void GamepadManager::platformGamepadConnected(PlatformGamepad& platformGamepad, EventMakesGamepadsVisible eventVisibility)
-{
-    if (eventVisibility == EventMakesGamepadsVisible::No)
-        return;
-
-    // Notify blind Navigators and Windows about all gamepads except for this one.
-    for (auto& gamepad : GamepadProvider::singleton().platformGamepads()) {
-        if (!gamepad || gamepad == &platformGamepad)
-            continue;
-
-        makeGamepadVisible(*gamepad, m_gamepadBlindNavigators, m_gamepadBlindDOMWindows);
-    }
-
-    m_gamepadBlindNavigators.clear();
-    m_gamepadBlindDOMWindows.clear();
-
-#if PLATFORM(VISION)
-    // Notify everyone not in the quarantined list of this new gamepad.
-    WeakHashSet<Navigator> navigators;
-    WeakHashSet<LocalDOMWindow, WeakPtrImplWithEventTargetData> windows;
-    findUnquarantinedNavigatorsAndWindows(navigators, windows);
-    makeGamepadVisible(platformGamepad, navigators, windows);
-#else
-    // Notify everyone of this new gamepad.
-    makeGamepadVisible(platformGamepad, m_navigators, m_domWindows);
-#endif
+    m_hasPendingConnections = true;
+    if (eventVisibility == EventMakesGamepadsVisible::Yes)
+        makeGamepadsVisible();
 }
 
 void GamepadManager::platformGamepadDisconnected(PlatformGamepad& platformGamepad)
 {
-    WeakHashSet<Navigator> notifiedNavigators;
-
-    // Handle the disconnect for all DOMWindows with event listeners and their Navigators.
     for (auto& window : copyToVectorOf<WeakPtr<LocalDOMWindow, WeakPtrImplWithEventTargetData>>(m_domWindows)) {
         // Event dispatch might have made this window go away.
         if (!window)
             continue;
-
-        // This LocalDOMWindow's Navigator might not be accessible. e.g. The LocalDOMWindow might be in the back/forward cache.
-        // If this happens the LocalDOMWindow will not get this gamepaddisconnected event.
         Ref navigator = window->navigator();
-
-        // If this Navigator hasn't seen gamepads yet then its Window should not get the disconnect event.
-        if (m_gamepadBlindNavigators.contains(navigator.get()))
-            continue;
-#if PLATFORM(VISION)
-        if (m_gamepadQuarantinedNavigators.contains(navigator.get()))
-            continue;
-#endif
-
         auto& navigatorGamepad = NavigatorGamepad::from(navigator);
-
-        Ref gamepad = navigatorGamepad.gamepadFromPlatformGamepad(platformGamepad);
-
-        navigatorGamepad.gamepadDisconnected(platformGamepad);
-        notifiedNavigators.add(navigator.get());
-
-        window->dispatchEvent(GamepadEvent::create(eventNames().gamepaddisconnectedEvent, gamepad.get()), window->protectedDocument().get());
+        RefPtr gamepad = navigatorGamepad.gamepadIfExists(platformGamepad);
+        if (!gamepad)
+            continue;
+        gamepad->setConnected(false);
+        window->dispatchEvent(GamepadEvent::create(eventNames().gamepaddisconnectedEvent, *gamepad), window->protectedDocument().get());
+        navigatorGamepad.removeGamepadIfExists(platformGamepad);
     }
-
-    // Notify all the Navigators that haven't already been notified.
     for (Ref navigator : m_navigators) {
-        if (!notifiedNavigators.contains(navigator.get()))
-            NavigatorGamepad::from(navigator).gamepadDisconnected(platformGamepad);
+        auto& navigatorGamepad = NavigatorGamepad::from(navigator);
+        RefPtr gamepad = navigatorGamepad.gamepadIfExists(platformGamepad);
+        if (!gamepad)
+            continue;
+        gamepad->setConnected(false);
+        navigatorGamepad.removeGamepadIfExists(platformGamepad);
     }
 }
 
 void GamepadManager::platformGamepadInputActivity(EventMakesGamepadsVisible eventVisibility)
 {
-    if (eventVisibility == EventMakesGamepadsVisible::No)
-        return;
-
-    if (m_gamepadBlindNavigators.isEmptyIgnoringNullReferences() && m_gamepadBlindDOMWindows.isEmptyIgnoringNullReferences())
-        return;
-
-    for (auto& gamepad : GamepadProvider::singleton().platformGamepads()) {
-        if (gamepad)
-            makeGamepadVisible(*gamepad, m_gamepadBlindNavigators, m_gamepadBlindDOMWindows);
-    }
-
-    m_gamepadBlindNavigators.clear();
-    m_gamepadBlindDOMWindows.clear();
+    if (eventVisibility == EventMakesGamepadsVisible::Yes)
+        makeGamepadsVisible();
 }
 
-void GamepadManager::makeGamepadVisible(PlatformGamepad& platformGamepad, WeakHashSet<Navigator>& navigatorSet, WeakHashSet<LocalDOMWindow, WeakPtrImplWithEventTargetData>& domWindowSet)
+void GamepadManager::makeGamepadsVisible()
 {
-    LOG(Gamepad, "(%u) GamepadManager::makeGamepadVisible - New gamepad '%s' is visible", (unsigned)getpid(), platformGamepad.id().utf8().data());
-
-    if (navigatorSet.isEmptyIgnoringNullReferences() && domWindowSet.isEmptyIgnoringNullReferences())
+    if (!m_hasPendingConnections)
         return;
+    m_hasPendingConnections = false;
 
-    for (Ref navigator : navigatorSet)
-        NavigatorGamepad::from(navigator).gamepadConnected(platformGamepad);
-
+    // Copy the Vector to avoid possible event dispatch changing the list.
+    auto platformGamepads = copyToVectorOf<WeakPtr<PlatformGamepad>>(GamepadProvider::singleton().platformGamepads());
+    if (platformGamepads.isEmpty())
+        return;
     for (auto& window : copyToVectorOf<WeakPtr<LocalDOMWindow, WeakPtrImplWithEventTargetData>>(m_domWindows)) {
         // Event dispatch might have made this window go away.
         if (!window)
             continue;
-
-        // This LocalDOMWindow's Navigator might not be accessible. e.g. The LocalDOMWindow might be in the back/forward cache.
-        // If this happens the LocalDOMWindow will not get this gamepadconnected event.
-        // The new gamepad will still be visibile to it once it is restored from the back/forward cache.
-        NavigatorGamepad& navigator = navigatorGamepadFromDOMWindow(*window);
-
-        Ref gamepad = navigator.gamepadFromPlatformGamepad(platformGamepad);
-        RefPtr document = navigator.navigator().document();
-
-        LOG(Gamepad, "(%u) GamepadManager::makeGamepadVisible - Dispatching gamepadconnected event for gamepad '%s'", (unsigned)getpid(), platformGamepad.id().utf8().data());
-        UserGestureIndicator gestureIndicator(IsProcessingUserGesture::Yes, document.get());
-        window->dispatchEvent(GamepadEvent::create(eventNames().gamepadconnectedEvent, gamepad.get()), window->protectedDocument().get());
+        Ref navigator = window->navigator();
+#if PLATFORM(VISION)
+        if (RefPtr page = navigator->page(); page && !page->gamepadAccessGranted())
+            continue;
+#endif
+        NavigatorGamepad& navigatorGamepad = NavigatorGamepad::from(navigator);
+        RefPtr document = navigator->document();
+        for (auto& platformGamepad : platformGamepads) {
+            if (!platformGamepad)
+                continue;
+            // As per spec, if the gamepad is [[exposed]], do not post events.
+            if (navigatorGamepad.gamepadIfExists(*platformGamepad.get()))
+                continue;
+            // As per spec, set [[exposed]] to true.
+            Ref gamepad = navigatorGamepad.ensureGamepad(*platformGamepad.get());
+            LOG(Gamepad, "(%u) GamepadManager::makeGamepadVisible - Dispatching gamepadconnected event for gamepad '%s'", (unsigned)getpid(), platformGamepad->id().utf8().data());
+            UserGestureIndicator gestureIndicator(IsProcessingUserGesture::Yes, document.get());
+            window->dispatchEvent(GamepadEvent::create(eventNames().gamepadconnectedEvent, gamepad.get()), window->protectedDocument().get());
+        }
+    }
+    for (Ref navigator : m_navigators) {
+#if PLATFORM(VISION)
+        if (RefPtr page = navigator->page(); page && !page->gamepadAccessGranted())
+            continue;
+#endif
+        auto& navigatorGamepad = NavigatorGamepad::from(navigator);
+        for (auto& platformGamepad : platformGamepads) {
+            if (!platformGamepad)
+                continue;
+            // As per spec, set [[exposed]] to true.
+            navigatorGamepad.ensureGamepad(*platformGamepad.get());
+        }
     }
 }
 
 void GamepadManager::registerNavigator(Navigator& navigator)
 {
     LOG(Gamepad, "(%u) GamepadManager registering Navigator %p", (unsigned)getpid(), &navigator);
-
     ASSERT(!m_navigators.contains(navigator));
     m_navigators.add(navigator);
-
-#if PLATFORM(VISION)
-    RefPtr page = navigator.page();
-    if (page && page->gamepadAccessGranted())
-        m_gamepadBlindNavigators.add(navigator);
-    else
-        m_gamepadQuarantinedNavigators.add(navigator);
-#else
-    m_gamepadBlindNavigators.add(navigator);
-#endif
-
     maybeStartMonitoringGamepads();
 }
 
 void GamepadManager::unregisterNavigator(Navigator& navigator)
 {
     LOG(Gamepad, "(%u) GamepadManager unregistering Navigator %p", (unsigned)getpid(), &navigator);
-
     ASSERT(m_navigators.contains(navigator));
     m_navigators.remove(navigator);
-    m_gamepadBlindNavigators.remove(navigator);
-
-#if PLATFORM(VISION)
-    m_gamepadQuarantinedNavigators.remove(navigator);
-#endif
-
     maybeStopMonitoringGamepads();
 }
 
 void GamepadManager::registerDOMWindow(LocalDOMWindow& window)
 {
     LOG(Gamepad, "(%u) GamepadManager registering LocalDOMWindow %p", (unsigned)getpid(), &window);
-
+    // Anytime we register a LocalDOMWindow, we should make sure its NavigatorGamepad is constructed.
+    NavigatorGamepad::from(window.protectedNavigator());
     ASSERT(!m_domWindows.contains(window));
     m_domWindows.add(window);
-
-    // Anytime we register a LocalDOMWindow, we should make sure its NavigatorGamepad is constructed.
-    Ref navigator = navigatorGamepadFromDOMWindow(window).navigator();
-    if (m_navigators.contains(navigator.get())) {
-        // If this LocalDOMWindow's NavigatorGamepad was already registered but was still blind,
-        // then this LocalDOMWindow should be blind.
-        if (m_gamepadBlindNavigators.contains(navigator.get()))
-            m_gamepadBlindDOMWindows.add(window);
-#if PLATFORM(VISION)
-        else if (m_gamepadQuarantinedNavigators.contains(navigator.get()))
-            m_gamepadQuarantinedDOMWindows.add(window);
-#endif
-
-        maybeStartMonitoringGamepads();
-    }
+    maybeStartMonitoringGamepads();
 }
 
 void GamepadManager::unregisterDOMWindow(LocalDOMWindow& window)
 {
     LOG(Gamepad, "(%u) GamepadManager unregistering LocalDOMWindow %p", (unsigned)getpid(), &window);
-
     ASSERT(m_domWindows.contains(window));
     m_domWindows.remove(window);
-    m_gamepadBlindDOMWindows.remove(window);
-
-#if PLATFORM(VISION)
-    m_gamepadQuarantinedDOMWindows.remove(window);
-#endif
-
     maybeStopMonitoringGamepads();
 }
 
 #if PLATFORM(VISION)
-void GamepadManager::updateQuarantineStatus()
+void GamepadManager::didUpdateGamepadAccess()
 {
-    if (m_gamepadQuarantinedNavigators.isEmptyIgnoringNullReferences() && m_gamepadQuarantinedDOMWindows.isEmptyIgnoringNullReferences())
-        return;
-
-    WeakHashSet<Navigator> navigators;
-    WeakHashSet<LocalDOMWindow, WeakPtrImplWithEventTargetData> windows;
-    for (auto& navigator : m_gamepadQuarantinedNavigators) {
-        RefPtr page = navigator.page();
-        if (page && page->gamepadAccessGranted()) {
-            LOG(Gamepad, "(%u) GamepadManager found navigator %p to release from quarantine", (unsigned)getpid(), &navigator);
-            navigators.add(navigator);
-        }
-    }
-    for (auto& window : m_gamepadQuarantinedDOMWindows) {
-        RefPtr page = window.page();
-        if (page && page->gamepadAccessGranted()) {
-            LOG(Gamepad, "(%u) GamepadManager found window %p to release from quarantine", (unsigned)getpid(), &window);
-            windows.add(window);
-        }
-    }
-
-    if (navigators.isEmptyIgnoringNullReferences() && windows.isEmptyIgnoringNullReferences())
-        return;
-
-    for (auto& navigator : navigators) {
-        m_gamepadBlindNavigators.add(navigator);
-        m_gamepadQuarantinedNavigators.remove(navigator);
-    }
-    for (auto& window : windows) {
-        m_gamepadBlindDOMWindows.add(window);
-        m_gamepadQuarantinedDOMWindows.remove(window);
-    }
+    m_hasPendingConnections = true;
+    makeGamepadsVisible();
 }
 #endif // PLATFORM(VISION)
 
