Source/WebCore/page/Page.cpp
@@ -5613,7 +5613,7 @@ void Page::allowGamepadAccess()
         return;
 
     m_gamepadAccessGranted = true;
-    GamepadManager::singleton().updateQuarantineStatus();
+    GamepadManager::singleton().didUpdateGamepadAccess();
 }
 
 void Page::initializeGamepadAccessForPageLoad()
